sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: illegal start of simple expression
  while (estTrier)){
                  ^