sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var estPasTrier=true
  while (estTrier)){
    for (i<-0 to getNombreValeurs-2){
    	var j=i
    	while(j<getNombreValeurs-1 & plusPetit(j+1,j)){
      	echange(j,j+1)
        estPastrier=false
      }
  	} 
  }
}